--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "gsap": "^2.1.3",
+    "http-server": "^0.11.1",
+    "node-sass": "^4.12.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0",
-    "gsap": "^2.1.3",
-    "node-sass": "^4.12.0",
+    "react-map-gl": "^5.1.2",
     "react-router-dom": "^5.0.1",
+    "react-scripts": "3.2.0",
     "react-transition-group": "^2.9.0"
   },
   "scripts": {
@@ -31,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2"
   }
 }
