--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-map-gl": "^5.1.2",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "react-transition-group": "^2.9.0"
   },
   "scripts": {
